--- a/src/de/unistuttgart/iwb/multivalcagui/messages_de.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages_de.properties
@@ -43,8 +43,10 @@ mp182=Komponentengruppe
 mp182e=Neue Komponentengruppe erfassen
 mp19=Komposition
 mp19e=Neue Komposition erfassen
+mp191=Einzelkomposition
+mp191e=Einzelne Komposition erfassen
 mp192=Kompositionsgruppe
-
+mp192e=Neue Kompositionsgruppe erfassen
 
 mp2=Hilfe
 mp21=Über
@@ -99,7 +101,6 @@ mp51=Sachbilanz berechnen
 mp51e=Sachbilanzen aller Produktsysteme
 mp52=Wirkungsabschätzung berechnen
 mp52e=Wirkungsabschätzung für einzelne Objekte
-
 
 mp6=Datei
 mp61=XML-Export
@@ -181,8 +182,6 @@ p19n6=Name der hinzuzufügenden Komposition
 
 p22n1=Subkomposition
 p22n2=Subkompositionsgruppe
-
-
 
 //Label der Buttons
 
@@ -288,6 +287,3 @@ stat61=\u0020Elemente <<<
 stat62=>>> Der Name bezeichnet bereits eine Kompositionsgruppe <<<
 stat63=\u0020 Kompositionen <<<
 stat64=>>> Die angegebene Komposition existiert nicht <<<
-
-
-
