--- a/src/de/unistuttgart/iwb/multivalcagui/messages_en.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages_en.properties
@@ -1,45 +1,228 @@
 
+// general messages
+
 head1=MultiVaLCA
 info1=Dr.-Ing. Joachim Schwarte
 info2=Institute for Construction Materials
 info3=University of Stuttgart
+
+// menu items
+
 mp1=New/Edit
 mp11=Flow
 mp11e=Create new flow
 mp12=Unit Process
 mp12e=Create new Unit Process
+mp121=Single Unit Process
+mp121e=Create new Single Unit Process
+mp122=Group of Unit Processes
+mp122e=Create new Group of Unit Processes
 mp13=Product System
 mp13e=Create new Product System
+mp131=Single Product System
+mp131e=Create Single Product System
+mp132=Group of Product Systems
+mp132e=Create Group of Product Systems
+mp14=Impact Category
+mp14e=Create new Impact Category
+mp15=Characterization Factor
+mp15e=Create new Characterization Factor
+mp16=Evaluation Method
+mp16e=Create new Evaluation Method
+mp17=Product Declaration
+mp17e=Create new Product Declaration
+mp171=Single Product Declaration
+mp171e=Create new Single Product Declaration
+mp172=Group of Product Declarations
+mp172e=Create new Group of Product Declarations
+mp18=Component
+mp18e=Create new Component
+mp181=Single Component
+mp181e=Create new Single Component
+mp182=Group of Components
+mp182e=Create new Group of Components
+mp19=Composition
+mp19e=Create new Composition
+mp191=Single Composition
+mp191e=Create new Single Composition
+mp192=Group of Compositions
+mp192e=Create new Group of Compositions
+
 mp2=Help
 mp21=About
 mp21e=Info
+
 mp3=Preferences
 mp31=Language
 mp31e=Language Selection
-bt01=Store
+
+mp4=List
+mp41=Flows
+mp41e=List of all Flows
+mp42=Unit Processes
+mp42e=List of all Unit Processes
+mp421=Single Unit Processes
+mp421e=List of all Single Unit Processes
+mp422=Groups of Unit Processes
+mp422e=List of all Groups of Unit Processes
+mp43=Product Systems
+mp43e=List of all Product Systems
+mp431=Single Product Systems
+mp431e=List of all Single Product Systems
+mp432=Groups of Product Systems
+mp432e=List of all Groups of Product Systems
+mp44=Impact Categories
+mp44e=List of all Impact Categories
+mp45=Characterization Factors
+mp45e=List of all Characterization Factors
+mp46=Evaluation Methods
+mp46e=List of Evaluation Methods
+mp47=Product Declarations
+mp47e=List of Product Declarations
+mp471=Single Product Declarations
+mp471e=List of all Single Product Declarations
+mp472=Groups of Product Declarations
+mp472e=List of all Groups of Product Declarations
+mp48=Components
+mp48e=List of Components
+mp481=Single Components
+mp481e=List of all Single Components
+mp482=Groups of Components
+mp482e=List of all Groups of Components
+mp49=Compositions
+mp49e=List of Compositions
+mp491=Single Compositions
+mp491e=List of all Single Compositions
+mp492=Groups of Compositions
+mp492e=List of all Groups of Compositions
+
+mp5=Evaluation
+mp51=LCI Evaluation 
+mp51e=LCIs of all Product Systems
+mp52=LCIA Evaluation
+mp52e=LCIA for single Objects
+
+mp6=File
+mp61=XML-Export
+mp61e=Database export into XML-file
+mp62=XML-Import
+mp62e=Database import into XML-file
+
+// Label of Panels
+
 p01n1=New Flow
 p01n2=Name of the Flow
 p01n3=Type
 p01n4=Unit
-stat01=>>> \u2026 <<<
+
 p02n1=New Unit Process
 p02n2=Name of the Unit Process
 p02n4=Amount
+p02n5=Lower Bound
+p02n6=Upper Bound
+p02n7=New Group of Unit Processes
+p02n8=Name of the Group
+p02n9=relevant Product Flow
+p02n10=Name of the Unit Process to add
+
+p03n1=Create New Product System
+p03n2=Name of the Product System
+p03n3=Unit Process/Group of Unit Processes/Subsystem/Group of Subsystems
+p03n4=Product in demand vector
+p03n6=Pre- or Coproduct
+p03n7=New Group of Product Systems
+p03n8=Name of Product System to add
+
+p06n1=Name
+
+p08n1=Type of Element
+p08n2=Name of Element
+p08n3=Subsystem
+p08n4=Demand
+p08n5=Group of Subsystems
+
+p10n1=New Impact Category
+p10n2=Name of Impact Category
+p10n3=Indicator
+
+p11n1=Category Indicator
+
+p12n1=New Characterization Factor
+p12n2=Name of the Characterization Factor
+p12n3=Factor
+
+p13n1=Category
+
+p14n1=New LCIA Method
+p14n2=Name of the LCIA Method
+
+p16n1=Impact assessment
+p16n2=Object Type
+p16n3=Object Name
+p16n4=Type of Value
+p16n5=Value
+
+p17n1=New Product Declaration
+p17n2=Name of the Product to declare
+p17n3=New Group of Product Declarations
+p17n4=Name of Product Declaration to add
+
+p18n1=New Component
+p18n2=Name of Component
+p18n3=Reference
+p18n4=New Group of Components
+p18n5=Name of Component to add
+
+p19n1=New Composition
+p19n2=Name of Composition
+p19n3=Component to add
+p19n4=Count
+p19n5=New Group of Compositions
+p19n6=Name of Composition to add
+
+p22n1=Subcomposition
+p22n2=Group of Subcompositions
+
+//Label of buttons
+
+bt01=Store
 bt02=Create new Unit Process
 bt03=Add Flow
 bt04=Finished
-p03n1=Create New Product System
-p03n2=Name of the Product System
-p03n3=Unit Process/Subsystem
-p03n4=Product in demand vector
-p03n6=Pre- or Coproduct
 bt05=Create new Product System
 bt06=Add Process / System
 bt07=Next
 bt08=Add Produkt to demand vector
 bt09=Add Pre- or Coproduct Flow
-stat02=>>> No Name has been entered. <<<
-stat03=>>> The name is already in use. <<<
+bt10=Confirm Bounds
+bt11=Add
+bt12=Display Results
+bt13=Create new Component
+bt14=Create new Composition
+bt15=Add Component
+bt16=Create new Group
+bt17=Add Unit Process to Group
+bt18=Add Product System to Group
+bt19=Add Product Declaration to Group
+bt20=Add Component to Group
+bt21=Add Composition to Group
+
+//Label of LowerUpperDialog
+
+lbl01=Fixed Deviation in %
+btn18=Apply Deviation
+
+// Label of FlowTypeStringMap and ValueTypeStringMap
+
+cob01=Elementary Flow
+cob02=Product Flow
+cob03=Main Value
+
+// Status messages
+
+stat01=>>> \u2026 <<<
+stat02=>>> No Name has been entered <<<
+stat03=>>> The name is already in use <<<
 stat04=>>> Number of Flow Objects:\u0020
 stat05=\u0020<<<
 stat06=>>> Number of Unit Processes:\u0020
@@ -53,124 +236,54 @@ stat13=>>> Illegal Recursion <<<
 stat14=>>> Product System\u0020
 stat15=\u0020contains\u0020
 stat16=\u0020Elements <<<
-stat17=>>> The Name does not belong to a Unit Process or Product System. <<<
-stat18=>>> The demand vector contains
+stat17=>>> The Name does not belong to a Unit Process or Product System <<<
+stat18=>>> The demand vector contains\u0020
 stat19=>>> The vector of Pre- or Coproducts contains\u0020
 stat20=>>> Space is an illegal character! <<<
-mp4=List
-mp41=Flows
-mp41e=List of all Flows
-mp42=Unit Processes
-mp42e=List of all Unit Processes
-mp43=Product Systems
-mp43e=List of all Product Systems
-p02n5=Lower Bound
-p02n6=Upper Bound
-bt10=Confirm Bounds
 stat21=>>> Illegal Entry <<<
-p06n1=Name
-p08n1=Type of Element
-p08n2=Name of Element
-p08n3=Subsystem
-p08n4=Demand
-mp5=Evaluation
-mp51=LCI Evaluation 
-mp51e=LCIs of all Product Systems
-mp6=File
-mp61=XML-Export
-mp61e=Database export into XML-file
-mp62=XML-Import
-mp62e=Database import into XML-file
-mp14=Impact Category
-mp14e=Create new Impact Category
-p10n1=New Impact Category
-p10n2=Name of Impact Category
-p10n3=Indicator
-stat22=>>> No Category has been entered. <<<
-stat23=>>> The Category already exists. <<<
-stat24=>>> No Indicator has been entered. <<<
+stat22=>>> No Category has been entered <<<
+stat23=>>> The Category already exists <<<
+stat24=>>> No Indicator has been entered <<<
 stat25=>>> Number of Impact Categories:\u0020
-mp44=Impact Categories
-mp44e=List of all Impact Categories
-p11n1=Category Indicator
-mp15=Characterization Factor
-mp15e=Create new Characterization Factor
-p12n1=New Characterization Factor
-p12n2=Name of the Characterization Factor
-p12n3=Factor
 stat26=>>> Illegal Factor <<<
-stat27=>>> The entered Impact Category does not exist. <<<
-mp45=Characterization Factors
-mp45e=List of all Characterization Factors
-p13n1=Category
-mp16=Evaluation Method
-mp16e=Create new Evaluation Method
-mp46=Evaluation Methods
-mp46e=List of Evaluation Methods
-mp52=LCIA Evaluation
-mp52e=LCIA for single Objects
-p14n1=New LCIA Method
-p14n2=Name of the LCIA Method
-bt11=Add
+stat27=>>> The entered Impact Category does not exist <<<
 stat28=>>> Categories:\u0020
 stat29=\u0020<<< >>> Chraracterization Factors:\u0020
-stat30=>>> The entered Characterization Factor does not exist. <<<
-p16n1=Impact assessment
-p16n2=Object Type
-bt12=Display Results
-cob01=Elementary Flow
-cob02=Product Flow
-cob03=Main Value
-p16n3=Object Name
-p16n4=Type of Value
-p16n5=Value
-stat31=>>> The Unit Process is already present in the Product System. <<<
-mp17=Product Declaration
-mp18=Component
-mp19=Composition
-p17n1=New Product Declaration
-p18n1=New Component
-p19n1=New Composition
-mp17e=Create new Product Declaration
-mp18e=Create new Component
-mp19e=Create new Composition
-mp47=Product Declarations
-mp48=Components
-mp49=Compositions
-mp47e=List of Product Declarations
-mp48e=List of Components
-mp49e=List of Compositions
-p17n2=Name of the Product to declare
-stat32=>>> No LCIA Method was entered. <<<
-stat33=>>> LCIA Method does not exist. <<<
+stat30=>>> The entered Characterization Factor does not exist <<<
+stat31=>>> The Unit Process is already present in the Product System <<<
+stat32=>>> No LCIA Method was entered <<<
+stat33=>>> LCIA Method does not exist <<<
 stat34=>>> Number of Product Declarations: <<<
 stat35=>>> Incorrect Impact Category <<<
-p18n2=Name of Component
-p18n3=Reference
-bt13=Create new Component
-p19n2=Name of Composition
-p19n3=Component to add
-bt14=Create new Composition
-bt15=Add Component
-stat36=>>> The name is in use otherwise. <<<
-mp121=Single Unit Process
-mp122=Group of Unit Processes
-mp121e=Create single Unit Process
-mp122e=Create Group of Unit Processes
-p20n1=New Unit Process Group
-p20n2=Name of the Group
-p20n3=Relevant Product Flow
-p20n4=Name of the Unit Process to add
-bt16=Create new Group
-bt17=Add Unit Process to Group
-stat37=>>> The Flow does not exist. <<<
-stat38=>>> The Unit Process does not exist. <<<
-stat39=>>> The Unit Process is not compatible. <<<
+stat36=>>> The name is in use otherwise <<<
+stat37=>>> The Flow does not exist <<<
+stat38=>>> The Unit Process does not exist <<<
+stat381=>> The Product System does not exist <<<
+stat39=>>> The Unit Process is not compatible <<<
+stat391=>>> The Product System is not compatible <<<
 stat40=>>> The Group contains\u0020
-stat41=\u0020 Unit Processes. <<<
-stat42=>>> Name is neither Product System nor Product Declaration <<<
-lbl01=Fixed Deviation in %
-btn18=Apply Deviation
-stat43=>>> The Name already designates a Unit Process. <<<
-stat44=>>> The Name already designates a Unit Process Group. <<<
-stat45=>>> The Name already designates a Product System. <<<
+stat41=\u0020 Unit Processes <<<
+stat42=>>> Name is neither Product System nor (Group of) Product Declaration(s) <<<
+stat43=>>> The Name already designates a Unit Process <<<
+stat44=>>> The Name already designates a Unit Process Group <<<
+stat441=>>> The Name already designates a Group of Product Systems <<<
+stat45=>>> The Name already designates a Product System <<<
+stat46=>>> The Name already designates a Group of Product Declarations <<<
+stat47=\u0020 Product Declarations <<<
+stat48=>>> The entered Product Declaration does not exist <<<
+stat49=\u0020 Impact Categories <<<
+stat50=>>> The Name already designates a Product Declaration <<<
+stat51=>>> Product Declaration
+stat52=>>> The Product Declaration is not compatible (unit) <<<
+stat53=>>> The Name already designates a Group of Components <<<
+stat54=\u0020 Components <<<
+stat55=>>> The Component does not exist <<<
+stat56=>>> The Name already designates a Composition <<<
+stat57=>>> Number of Compositions:\u0020
+stat58=>>> The Composition does not exist <<<
+stat59=>>> Name is neither (Group of) Component(s), (Group of) Composition(s) nor Product System <<<
+stat60=>>> The Composition owns\u0020
+stat61=\u0020Elements <<<
+stat62=>>> The Name already designates a Group of Compositions <<<
+stat63=\u0020 Compositions <<<
+stat64=>>> The Composition does not exist <<<
