--- a/src/de/unistuttgart/iwb/multivalcagui/messages_de.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages_de.properties
@@ -2,7 +2,7 @@
 // Allgemein
 
 head1=MultiVaLCA
-info1=Dr.-Ing. Joachim Schwarte
+info1=Dr.-Ing. Joachim Schwarte, Dipl.-Ing. Helen Hein
 info2=Institut für Werkstoffe im Bauwesen
 info3=Universität Stuttgart
 
