--- a/src/de/unistuttgart/iwb/multivalcagui/messages_fr.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages_fr.properties
@@ -1,6 +1,6 @@
 
 head1=MultiVaLCA
-info1=Dr.-Ing. Joachim Schwarte
+info1=Dr.-Ing. Joachim Schwarte, Dipl.-Ing. Helen Hein
 info2=Institut des Matérieaux de Construction
 info3=Université de Stuttgart
 mp1=Nouveau/Éditer
