--- a/src/de/unistuttgart/iwb/multivalcagui/messages_hr.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages_hr.properties
@@ -1,6 +1,6 @@
 
 head1=MultiVaLCA
-info1=Dr.-Ing. Joachim Schwarte
+info1=Dr.-Ing. Joachim Schwarte, Dipl.-Ing. Helen Hein
 info2=Institut za\u00A0\u00A0gra\u0111evinske\u00A0mateijale (IWB)
 info3=Sveu\u010Dili\u0161te Stuttgart
 mp1=Novo/Uredi
