--- a/src/de/unistuttgart/iwb/multivalcagui/messages.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages.properties
@@ -1,6 +1,6 @@
 
 head1=MultiVaLCA
-info1=Dr.-Ing. Joachim Schwarte, Dipl.-Ing. Helen Hein
+info1=Dr.-Ing. Joachim Schwarte M. A., Dr.-Ing. Helen Hein
 info2=Institut für Werkstoffe im Bauwesen
 info3=Universität Stuttgart
 mp1=Neu/Bearbeiten
