--- a/src/de/unistuttgart/iwb/multivalcagui/messages_en.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages_en.properties
@@ -2,7 +2,7 @@
 // general messages
 
 head1=MultiVaLCA
-info1=Dr.-Ing. Joachim Schwarte, Dipl.-Ing. Helen Hein
+info1=Dr.-Ing. Joachim Schwarte M. A., Dr.-Ing. Helen Hein
 info2=Institute for Construction Materials
 info3=University of Stuttgart
 
